--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
-    <h1>Hello, this is Alex's website!</h1>
+    <h1>Hello, this is Alex's test website for github hosting!</h1>
 
 
     </body>
